feat: correctly configured react query for RSC, changed CORS config, changed api middlware and openapi security schemas to check for cookie headers instead of bearer tokens, and added cookie caching to better-auth config
