# apps/api/src/lib/helpers/openapi/schemas/security-schemas.ts
@@ -1,0 +1,5 @@
+export const apiKeySecuritySchema = [
+  {
+    apiKeyAuth: [],
+  },
+]
